assets/css/less/admin-modules.less
/* Add-on tiles */
.wpbdp-addons {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-gap: 25px;
}

.wpbdp-addons,
.wpbdp-addons h2,
.wpbdp-addons h3 {
	color: var(--dark-grey);
}

.wpbdp-addons h2 {
	font-size: 17px;
}

.wpbdp-addons h3 {
	margin-top: 0;
}

.wpbdp-card {
	width: 100%;
	border-radius: 10px;
	border: 1px solid @border-color;
	opacity: 1;
	transition: opacity 1s;
	background: #fff;
	box-sizing: border-box;
}

.wpbdp-addons .wpbdp-card.wpbdp-addon-not-installed {
	position: relative;
}

.wpbdp-addons {
	.wpbdp-card {
		padding: 25px;
		border-color: transparent;
	}
	.wpbdp-card-module-icon {
		margin: 3px;
		display: inline-block;
	}

	.wpbdp-plugin-card-details {
		margin-bottom: 0;
		color: @text-color;
	}

	.wpbdp-plugin-card-docs {
		padding-top: 5px;
		a {
			text-decoration: none;
			font-weight: 500;
		}
	}

	.wpbdp-plugin-card-title {
		margin: 0 0 8px;
		font-weight: 600;
		font-size: 15px;
	}

	.wpbdp-addon-status {
		font-style: italic;
		opacity: 0.8;
		margin: 0 0 13px;
	}
}

.wpbdp-template-row p {
	opacity: 0.8;
}

.wpbdp-addon-active .button {
	visibility: hidden;
}

.wpbdp-addon-error {
	position: absolute;
	top: 55px;
	left: 10px;
	right: 10px;
	font-weight: bold;
	text-align: center;
}

.wpbdp-ribbon {
	-webkit-transform: rotate(45deg);
	-moz-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	-o-transform: rotate(45deg);
	transform: rotate(45deg);
	border: 25px solid transparent;
	border-bottom: 25px solid var(--orange);
	position: absolute;
	top: -31px;
	right: -74px;
	padding: 0px 10px;
	width: 30px;
	color: white;
	font-family: sans-serif;
	size: 11px;
}

.wpbdp-ribbon span {
	position: absolute;
	left: 25px;
	font-size: 15px;
	top: 4px;
}

/* Themes */

.wpbdp-theme-actions form { margin: 0; padding: 0; display: inline; }
.wpbdp-theme-actions form input[type="submit"] { margin: 0; }

.wpbdp-theme-details-wrapper {
    text-align: center;
}

.wpbdp-theme-thumbnail {
	width: 100%;
	height: 150px;
	object-fit: cover;
	object-position: 100% 0;
}

.wpbdp-theme .enter-license {
    display: none;
    position: absolute;
    float: none;
    font-weight: normal;
    top: 3px;
    right: 10px;
    color: @red;
}

.wpbdp-theme:hover {

	.enter-license {
		display: block;
	}

	a.delete-theme-link,
	.choose-theme {
	    display: inline-block;
	}
}

.wpbdp-theme.active .choose-theme,
.wpbdp-theme.active:hover .choose-theme {
    display: none;
}

#wpbdp-admin-page-theme-delete #delete-theme {
    margin-left: 20px;
    color: @red;
}

#wpbdp-admin-page-theme-delete #delete-theme:hover {
    background: #d54e21;
    border-color: #d54e21;
    color: #fff;
    box-shadow: none;
}

.wpbdp-theme {

	a.delete-theme-link {
	    display: none;
		margin-top: 4px;
	    margin-right: 10px;
		margin-left: 5px;
		color: @red !important;
		font-size: 13px;
	}

	&.wpbdp-card {
		padding-bottom: 0;
	}

	h2.wpbdp-plugin-card-title,
	.wpbdp-theme-thumbnail p {
		margin: 0 0 24px;
		padding-top: 0;
	}

	.wpbdp-card-footer {
		padding: 17px 0;
	}

	.addon-status {
		margin: 0;
	}

	.wpbdp-theme-update-info {
		display: inline-block;
		padding: 5px 24px;
		position: absolute;
		left: -1px;
		right: -1px;
		margin: 0;
		text-align: left;
		border-left-width: 1px;
	}

	.wpbdp-theme-update-info.theme-updated {
	    background: #ecf7ed;
	    border-left-color: #46b450;
	}

	.wpbdp-theme-update-info.update-error {
	    border-color: red;

		.update-message {
			color: red;
		}
	}

	.wpbdp-theme-update-info .update-message {
	    padding: 2px 4px;
	}

	.wpbdp-theme-update-info.theme-updated .update-message {
	    background: #F0F5F7;
	}

	.wpbdp-theme-license-required-row {
	    padding: 5px 10px;
	    border-top: solid 2px;
	    background: #fef7f1;
	    border-color: #D34F2B;
	}
}

.wpbdp-admin-module-icon img {
	width: 100%;
}

.wpbdp-admin-page-themes {
	.wpbdp-addons .wpbdp-card {
		position: relative;
	}
}

@media only screen and (max-width: 1200px) {
	.wpbdp-addons {
		grid-template-columns: 1fr 1fr;
	}
}

